--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                     </div>
                     <div class="right">
                         <h2>{{title}}</h2>
-                        <em>Genre {{genere_ids}}</em>
+                        <em>Genre {{genere_ids}}</em><br>
+                        <em>Revenue: ${{revenue}}</em><br>
+                        <em>Budget: ${{budget}}</em><br>
                         <em>Release: {{release_date}}</em><br>
                         <em>Runtime: {{runtime}} minutes</em><br>
                         <em>Rating: {{vote_average}}</em>
